--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "cv",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite --port 8080 --host 0.0.0.0 dev",
+		"start": "vite --port 8080 --host 0.0.0.0 dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
