Improved experience section with automated duration calculation

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/date-fns": "^2.6.0",
+		"date-fns": "^3.6.0",
 		"svelte-ionicons": "^1.1.2"
 	}
 }
