--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
 	"singleAttributePerLine": true,
 	"trailingComma": "none",
 	"printWidth": 100,
+	"proseWrap": "always",
 	"plugins": ["prettier-plugin-svelte"],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
