--- a/src/content.en.yml
+++ b/src/content.en.yml
@@ -1,7 +1,7 @@
 person:
   title: About Me
   name: Jan-Luca Klees
-  description: Senior Frontend Developer
+  description: Senior Frontend Developer | DevOps Enthusiast
   address:
     line1: Hans-Hinrichs-Str. 2
     line2: 32756 Detmold, Germany
