Control footer from content
Made it so that whether the footer is shown can be controlled from the
content.yml. This makes easiert to have two distinct versions. One for
the web, one for print.

--- a/src/content.en.yml
+++ b/src/content.en.yml
@@ -50,7 +50,7 @@ person:
 # opportunities to grow. My diverse background, combined with a proven track record of success,
 # makes me a valuable asset to any team looking to innovate and excel.
 
-footer: See my full cv at <a href="https:/cv.janlucaklees.de">cv.janlucaklees.de</a>.
+# footer: See my full cv at <a href="https:/cv.janlucaklees.de">cv.janlucaklees.de</a>.
 
 experiences:
   title: Experience
