--- a/src/content.print.en.yml
+++ b/src/content.print.en.yml
@@ -273,7 +273,7 @@ education:
       end: 2018-01-01
       positions:
         - start: 2014-10-01
-          jobTitle: B. sc. in Theoretical Computer Science
+          jobTitle: B.Sc. in Theoretical Computer Science
           employmentType: Student
           description: >
             81 credit points with an 1.8 average; Japanese studies as minor subject.
