--- a/src/content.en.yml
+++ b/src/content.en.yml
@@ -55,20 +55,20 @@ person:
 experiences:
   title: Experience
   items:
-    - companyName: KAIZN UG
-      location: Remote
-      positions:
-        - jobTitle: Co-Founder
-          start: 2023-03-31
-          employmentType: ad-hoc
-          description: >
-            Streamlining science through intuitive and user-friendly open-source software, we want
-            to ease the development of new and better medications and make science accessible to
-            everyone.
-          successStories:
-            - Simplified code-sharing for researchers by building a Docker-based microservice system
-              for scientific simulations.
-            - Implemented a plugin system from the ground up to power our simulation software.
+    # - companyName: KAIZN UG
+    #   location: Remote
+    #   positions:
+    #     - jobTitle: Co-Founder
+    #       start: 2023-03-31
+    #       employmentType: ad-hoc
+    #       description: >
+    #         Streamlining science through intuitive and user-friendly open-source software, we want
+    #         to ease the development of new and better medications and make science accessible to
+    #         everyone.
+    #       successStories:
+    #         - Simplified code-sharing for researchers by building a Docker-based microservice system
+    #           for scientific simulations.
+    #         - Implemented a plugin system from the ground up to power our simulation software.
 
     - companyName: LEANATIC GmbH
       location: Remote
